fixed border so the layout is more clear in light and dark mode

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden; /*Detta tar bort den lilla sido scrollen*/
+  /* background-color: rgb(86, 86, 17); Add to dark and light mode */ 
 }
 button {
   cursor: pointer;
@@ -103,7 +104,7 @@ button {
 
 .gridContainer {
   display: grid;
-  background-color: rgb(200, 160, 210);
+  background-color: rgb(200, 160, 210); /*Remove post design phase*/
   width: 100%;
   height: 100%;
   padding: 0 5% 0 5%;
@@ -214,6 +215,9 @@ button {
   color: rgb(0, 0, 0);
   font-size: 20px;
   font-family: sans-serif;
+  border-color: rgb(146, 240, 226);
+  border-style: solid;
+  border-width: thick;
 }
 
 .header {
